--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -3,19 +3,37 @@
 @form-card-title: #bd1738;
 @form-card-bg: #ece9e7;
 @card-border-radius: 10px;
-@card-title-underline-border:4px solid #bcb2aa;
+@card-title-underline-border: 4px solid #bcb2aa;
 @form-label-color: #68655c;
 @form-card-sec-title-bg: #f6ecd2;
 @form-card-sec-title-color: #231f20;
 @border-color: #bcb2aa;
 @primary-color: #bd1738;
 @import '~antd/dist/antd.less';
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 img {
   padding: 0;
   margin: 0;
+}
+
+.ant-form-item-label
+  > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
+  display: none !important;
+}
+
+.ant-form-item-label
+  > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::after {
+  display: inline-block;
+  margin-right: 4px;
+  color: #ff4d4f;
+  font-size: 14px;
+  font-family: SimSun, sans-serif;
+  line-height: 1;
+  content: '*';
 }
 
 .form_header {
@@ -42,20 +60,25 @@ img {
     height: 100px;
     line-height: 100px;
     background-color: @white;
+
     img {
       vertical-align: middle;
     }
   }
 }
+
 .form_content {
   .ant-input[disabled] {
     background-color: @form-card-bg;
   }
+
   margin: 10px;
+
   .ant-card {
     margin-top: 20px;
     border-radius: @card-border-radius;
     background-color: @form-bg;
+
     .ant-card-head {
       color: @form-card-title;
       background-color: @form-card-bg;
@@ -64,11 +87,13 @@ img {
       height: 50px;
       line-height: 50px;
     }
+
     .ant-card-head-title {
       font-weight: bold;
       font-size: 20px;
       padding: 0;
     }
+
     .fileWrapper {
       .ant-form-item-control-input-content {
         background-color: @white;
@@ -76,6 +101,7 @@ img {
         border: solid 1px #ebe8e5;
         border-radius: 5px;
       }
+
       .file_upload {
         width: 200px;
         height: 92px;
@@ -85,6 +111,7 @@ img {
         border-radius: 10px;
         border: dashed 1px @border-color;
         color: #6d6c5c;
+
         .anticon {
           font-size: 26px;
           margin-top: 20px;
@@ -96,6 +123,7 @@ img {
       border: 1px solid @border-color;
       border-radius: @card-border-radius;
       overflow: hidden;
+
       .sec-title {
         color: @form-card-sec-title-color;
         background-color: @form-card-sec-title-bg;
@@ -104,6 +132,7 @@ img {
         font-weight: bold;
         text-indent: 20px;
       }
+
       .sec-content {
         padding: 20px;
       }
@@ -112,32 +141,39 @@ img {
         .ant-tabs-ink-bar {
           background-color: transparent;
         }
+
         .ant-tabs-nav-list {
           padding: 0 20px;
         }
+
         .ant-tabs-nav {
           background-color: @form-card-sec-title-bg;
         }
+
         .ant-tabs-tab {
           padding: 0;
           height: 40px;
           line-height: 40px;
         }
+
         .ant-tabs-top > .ant-tabs-nav::before,
         .ant-tabs-bottom > .ant-tabs-nav::before,
         .ant-tabs-top > div > .ant-tabs-nav::before,
         .ant-tabs-bottom > div > .ant-tabs-nav::before {
           border-bottom: none;
         }
+
         .ant-tabs-tabpane {
           padding: 0 20px 20px;
         }
       }
+
       .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
         color: @form-card-title;
       }
     }
   }
+
   .actionWrapper {
     margin: 30px auto;
     text-align: center;
