--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -45,7 +45,7 @@ img {
   background-size: cover;
 
   .form_title {
-    font-size: 24px;
+    font-size: 30px;
     color: @white;
     line-height: 185px;
 
@@ -55,10 +55,10 @@ img {
   .form_logo {
     position: absolute;
     bottom: 0;
-    left: 10px;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
+    left: 9%;
+    width: 120px;
+    height: 120px;
+    line-height: 120px;
     background-color: @white;
 
     img {
@@ -72,7 +72,10 @@ img {
     background-color: @form-card-bg;
   }
 
-  margin: 10px;
+  min-width: 1000px;
+  width: 78%;
+  overflow-x: auto;
+  margin: 0 auto;
 
   .ant-card {
     margin-top: 20px;
