[add]-添加静态分包商界面

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -71,6 +71,9 @@ img {
   .ant-input[disabled] {
     background-color: @form-card-bg;
   }
+  .ant-form-item {
+    margin-bottom: 20px;
+  }
 
   min-width: 1000px;
   width: 78%;
