--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -68,8 +68,14 @@ img {
 }
 
 .form_content {
-  .ant-input[disabled] {
+  .ant-input[disabled],
+  .ant-picker.ant-picker-disabled {
     background-color: @form-card-bg;
+    color: @form-card-sec-title-color;
+  }
+
+  .ant-picker-input > input[disabled] {
+    color: @form-card-sec-title-color;
   }
 
   .ant-form-item {
@@ -101,29 +107,36 @@ img {
       padding: 0;
     }
 
+    .ant-upload.ant-upload-select-picture-card {
+      width: 200px;
+      background-color: #f1f1f1;
+      border: dashed 1px @border-color;
+    }
+
     .fileWrapper {
       .ant-form-item-control-input-content {
         background-color: @white;
         padding: 20px;
         border: solid 1px #ebe8e5;
         border-radius: 5px;
-      }
-
-      .file_upload {
-        width: 200px;
-        height: 92px;
-        text-align: center;
-        // line-height:92px;
-        background-color: #f1f1f1;
         border-radius: 10px;
-        border: dashed 1px @border-color;
-        color: #6d6c5c;
-
-        .anticon {
-          font-size: 26px;
-          margin-top: 20px;
-        }
       }
+
+      // .file_upload {
+      //   width: 200px;
+      //   height: 92px;
+      //   text-align: center;
+      //   // line-height:92px;
+      //   background-color: #f1f1f1;
+      //   border-radius: 10px;
+      //   border: dashed 1px @border-color;
+      //   color: #6d6c5c;
+
+      //   .anticon {
+      //     font-size: 26px;
+      //     margin-top: 20px;
+      //   }
+      // }
     }
 
     .sec-container {
@@ -184,6 +197,13 @@ img {
       color: @primary-color;
       margin: 0 5px;
     }
+  }
+
+  .anticon.anticon-bell {
+    margin: 0px 5px;
+    color: orange;
+    cursor: pointer;
+    font-size: 20px;
   }
 
   .actionWrapper {
