--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -86,6 +86,10 @@ img {
   .ant-picker-input > input[disabled] {
     color: @form-card-sec-title-color;
   }
+  .ant-select-disabled.ant-select:not(.ant-select-customize-input)
+    .ant-select-selector {
+    background-color: @form-card-bg;
+  }
 
   .ant-form-item {
     margin-bottom: 20px;
