[update]分包商表单优化

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -89,6 +89,7 @@ img {
   .ant-select-disabled.ant-select:not(.ant-select-customize-input)
     .ant-select-selector {
     background-color: @form-card-bg;
+    color: @form-card-sec-title-color;
   }
 
   .ant-form-item {
