--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -619,11 +619,15 @@ body {
       outline: none;
       border: none;
       border-bottom: 1px solid #666666;
+      border-radius: 0;
       &::placeholder {
         font-size: 20px;
         font-family: Alibaba;
         font-weight: normal;
         color: #999999;
+      }
+      &::selection {
+        background: #ffffff;
       }
     }
     img {
