--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -35,6 +35,17 @@
 
   user-select: none;
 }
+.Nodata {
+  text-align: center;
+  color: #65ac1e;
+  font-size: 30px;
+  width: 100%;
+}
+.eventCalendar {
+  .Nodata {
+    margin-top: 100px;
+  }
+}
 body {
   background-color: #efefef;
   padding-top: 70px;
@@ -66,6 +77,20 @@ body {
     justify-content: space-between;
     background: #333333;
     box-shadow: 0px 50px 50px 0px rgba(0, 0, 0, 0.5);
+    .headerLogo {
+      display: flex;
+    }
+    .logoName {
+      width: 100px;
+      height: 70px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #ffffff;
+      img {
+        width: 48px;
+      }
+    }
     ul {
       display: flex;
       align-items: center;
@@ -115,7 +140,7 @@ body {
 // 背景图片
 .headerArticle {
   position: relative;
-  z-index: -999;
+  z-index: 0;
   img {
     width: 100%;
   }
@@ -134,6 +159,7 @@ body {
       margin-bottom: 23px;
     }
     .headerArticleMore {
+      cursor: pointer !important;
       width: 105px;
       height: 37px;
       background: #666666;
@@ -144,7 +170,6 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
-      cursor: pointer;
     }
   }
 }
@@ -195,6 +220,21 @@ body {
     font-weight: normal;
     color: #999999;
     cursor: pointer;
+    span.turn {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      background-color: RGBA(213, 213, 213, 1);
+      text-align: center;
+      line-height: 20px;
+      &:nth-child(1) {
+        margin-right: 10px;
+      }
+      &:hover {
+        color: RGBA(213, 213, 213, 1);
+        background-color: RGBA(102, 102, 102, 1);
+      }
+    }
   }
 }
 
@@ -217,6 +257,7 @@ body {
             width: 23.5%;
             margin-right: 2%;
             position: relative;
+            cursor: pointer;
             &:last-child {
               margin-right: 0;
             }
@@ -266,6 +307,7 @@ body {
             margin-bottom: 12px;
             display: flex;
             align-items: center;
+            cursor: pointer;
             &:nth-child(even) {
               margin-right: 0;
             }
@@ -402,7 +444,7 @@ body {
         background: #ffffff;
         .part1 {
           width: 100%;
-          height: 305px;
+          height: 387px;
           padding: 23px;
           display: flex;
           flex-wrap: wrap;
@@ -412,7 +454,7 @@ body {
           }
           /* 滚动条的滑块 */
           &::-webkit-scrollbar-thumb {
-            background-color: #65ac1e;
+            background-color: rgba(153, 153, 153, 0.9);
             border-radius: 10px;
           }
           .partpro {
@@ -423,6 +465,7 @@ body {
             margin: 0 12px 12px 0;
             font-family: Alibaba;
             font-weight: normal;
+            cursor: pointer;
             &:nth-child(n + 1) {
               color: #65ac1e;
             }
@@ -437,6 +480,7 @@ body {
         .part2 {
           padding: 14px;
           width: 100%;
+          height: 414px;
           // .qaInfo {
           //   background: #ffffff;
           //   box-shadow: 0px 4px 28px 0px rgba(0, 0, 0, 0.2);
@@ -553,7 +597,7 @@ body {
       font-size: 16px;
       font-family: Alibaba;
       font-weight: normal;
-      color: #999999;
+      color: #000000;
       &::placeholder {
         font-size: 16px;
         font-family: Alibaba;
@@ -580,7 +624,7 @@ body {
     }
     .partLeft {
       width: 293px;
-      height: 600px;
+      height: 900px;
       background-color: #ffffff;
       padding: 23px;
       box-sizing: border-box;
@@ -619,6 +663,7 @@ body {
       }
     }
     .partRight {
+      height: 900px;
       flex: 1;
       background-color: #ffffff;
       margin-left: 23px;
@@ -638,9 +683,11 @@ body {
           font-weight: normal;
           color: #333333;
           span {
+            display: inline-block;
             margin-left: 16px;
             cursor: pointer;
             font-size: 10px;
+            margin-top: -5px;
           }
         }
       }
@@ -663,6 +710,7 @@ body {
             margin-right: 2%;
             margin-bottom: 2%;
             position: relative;
+            cursor: pointer;
             &:nth-child(4n + 4) {
               margin-right: 0;
             }
@@ -810,6 +858,12 @@ body {
         cursor: pointer;
         &:nth-child(3n + 3) {
           margin-right: 0;
+        }
+        img {
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 34px;
         }
         .partProWrapItemLeft {
           width: 94px;
