--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -36,10 +36,14 @@
   user-select: none;
 }
 .Nodata {
+  width: 500px;
+  margin: 0 auto;
   text-align: center;
   color: #65ac1e;
   font-size: 30px;
-  width: 100%;
+  img {
+    width: 100%;
+  }
 }
 .eventCalendar {
   .Nodata {
@@ -149,27 +153,31 @@ body {
     width: 100%;
     left: 0;
     top: 0;
-    padding: 105px 50px 0 50px;
-    .headerArticleText {
-      font-size: 16px;
-      font-family: Alibaba PuHuiTi;
-      font-weight: 500;
-      color: #333333;
-      width: 392px;
-      margin-bottom: 23px;
-    }
-    .headerArticleMore {
-      cursor: pointer !important;
-      width: 105px;
-      height: 37px;
-      background: #666666;
-      font-size: 16px;
-      font-family: Alibaba;
-      font-weight: normal;
-      color: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .headerArticleWrapOut {
+      padding-top: 105px;
+      max-width: 1500px;
+      margin: 0 auto;
+      .headerArticleText {
+        font-size: 16px;
+        font-family: Alibaba PuHuiTi;
+        font-weight: 500;
+        color: #333333;
+        width: 392px;
+        margin-bottom: 23px;
+      }
+      .headerArticleMore {
+        cursor: pointer !important;
+        width: 105px;
+        height: 37px;
+        background: #666666;
+        font-size: 16px;
+        font-family: Alibaba;
+        font-weight: normal;
+        color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
@@ -240,7 +248,9 @@ body {
 
 // Home页
 .bodypart {
-  padding: 37px 50px;
+  padding: 37px 0;
+  max-width: 1500px;
+  margin: 0 auto;
   .part {
     display: flex;
     margin-bottom: 50px;
@@ -434,17 +444,38 @@ body {
                 width: 100px;
               }
             }
+            .partOperateTit1 {
+              padding-top: 20px;
+              text-align: right;
+              font-size: 28px;
+              font-family: Alibaba PuHuiTi;
+              font-weight: bold;
+              font-style: italic;
+              color: #21a0d2;
+              line-height: 50px;
+              position: relative;
+              &::before {
+                position: absolute;
+                right: 0;
+                top: 0;
+                content: '';
+                width: 82px;
+                height: 4px;
+                background: #0d2680;
+              }
+            }
           }
         }
       }
     }
     .partRight {
+      width: 22%;
       .partbox {
-        width: 328px;
+        width: 100%;
         background: #ffffff;
         .part1 {
           width: 100%;
-          height: 387px;
+          height: 304px;
           padding: 23px;
           display: flex;
           flex-wrap: wrap;
@@ -480,7 +511,7 @@ body {
         .part2 {
           padding: 14px;
           width: 100%;
-          height: 414px;
+          height: 376px;
           // .qaInfo {
           //   background: #ffffff;
           //   box-shadow: 0px 4px 28px 0px rgba(0, 0, 0, 0.2);
@@ -581,7 +612,8 @@ body {
 .readItPart {
   position: relative;
   z-index: 1;
-  padding: 0 50px 20px;
+  max-width: 1500px;
+  margin: 0 auto;
   margin-top: -60px;
   .search {
     width: 100%;
@@ -622,16 +654,18 @@ body {
     &:last-child {
       margin-bottom: 0;
     }
+    height: 800px;
+    padding-bottom: 20px;
     .partLeft {
       width: 293px;
-      height: 900px;
+      height: 100%;
       background-color: #ffffff;
       padding: 23px;
       box-sizing: border-box;
       .partbox {
         margin-top: 23px;
         overflow: auto;
-        height: 460px;
+        height: calc(100% - 100px);
         &::-webkit-scrollbar {
           width: 4px;
         }
@@ -663,7 +697,7 @@ body {
       }
     }
     .partRight {
-      height: 900px;
+      height: 100%;
       flex: 1;
       background-color: #ffffff;
       margin-left: 23px;
@@ -692,7 +726,7 @@ body {
         }
       }
       .partbox.part1 {
-        height: 800px;
+        height: calc(100% - 80px);
         overflow: auto;
         &::-webkit-scrollbar {
           width: 4px;
@@ -780,6 +814,8 @@ body {
 }
 // eventCalendar
 .eventCalendar {
+  max-width: 1500px;
+  margin: 0 auto;
   margin-top: -200px;
   .dataPick {
     display: flex;
@@ -1185,7 +1221,7 @@ body {
     width: 992px;
   }
 }
-@media screen and (max-width: 1599px) {
+@media screen and (max-width: 1500px) {
   // 背景图片
   .headerArticle {
     img {
@@ -1481,6 +1517,9 @@ body {
             }
           }
         }
+      }
+      .partRight {
+        width: 30%;
       }
     }
   }
