--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1595,7 +1595,7 @@ body {
       justify-content: space-between;
       align-items: center;
       margin-bottom: 20px;
-      button {
+      button.def {
         width: 90px;
         height: 32px;
         background: #65ac1e;
