--- a/src/pages/EventCalendar/style.less
+++ b/src/pages/EventCalendar/style.less
@@ -1,13 +1,15 @@
-.ant-picker-separator {
-  color: #ffffff !important;
-}
-.ant-picker-range-wrapper {
-  .ant-picker-panels {
-    .ant-picker-header {
-      display: none;
-    }
-    .ant-picker-panel:last-child {
-      display: none !important;
+body.Event {
+  .ant-picker-separator {
+    color: #ffffff !important;
+  }
+  .ant-picker-range-wrapper {
+    .ant-picker-panels {
+      .ant-picker-header {
+        display: none;
+      }
+      .ant-picker-panel:last-child {
+        display: none !important;
+      }
     }
   }
 }
